# PhotoShare

./: .env.example  README.md  docker-compose.development.yml  docker-compose.yaml  docker-compose.yml
backend/: .dockerignore  Dockerfile  Dockerfile.development  README.md  pyproject.toml
backend/migrations/: env.py
backend/migrations/versions/: 025547361060_initial_migration.py  030a181bd7f7_add_post_public_id.py  0959eb0f8ee1_init.py  1a4c01a5e4f8_upgrade_models.py  1ffb53f08ba8_add_qr_field.py  31e87887e2c3_update_comment_model.py  38f040725e59_update_tag_model.py  41f244125c36_init.py  485edf88ae38_upgrade_user.py  488e1d8d9676_.py  4b4ef644c7aa_upgrade_post_model.py  4b814f7cecf6_update_user_model_with_foreign_keys.py  512a44dd440d_update_reletionships.py  539ba4b9e087_update_comment_model_with_foreign_keys.py  76a84a29ff04_initial_migration.py  b87c411da1da_initial_migration.py  c196f33c554e_init.py  e8d7de85a1bf_init.py  f28d56d76047_add_blacklist_model.py  f553642d0f16_add_coments_posts_reletionships.py
backend/src/: main.py  models.py  schemas.py
backend/src/api/: main.py
backend/src/conf/: config.py
backend/src/constants/: messages.py  role.py
backend/src/core/: config.py  db.py  security.py
backend/src/crud/: avatar.py  comments.py  post.py  tags.py  users.py
backend/src/models/: base.py  base_model.py  comment.py  helpers.py  image.py  post.py  tag.py  user.py
backend/src/schemas/: comments.py  email.py  posts.py  tags.py  token.py  users.py
backend/src/services/: auth.py  email.py  image_service.py  roles.py
backend/src/tests/: test.db  (+7 more)
(+32 files in other folders)
