[tool.poetry]
name = "photoshare-backend"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
sqlalchemy = "^2.0.28"
psycopg2-binary = "^2.9.9"
alembic = "^1.13.1"
fastapi-mail = "^1.4.1"
python-jose = "^3.3.0"
passlib = "^1.7.4"
libgravatar = "^1.0.4"
python-multipart = "^0.0.9"
bcrypt = "^4.1.2"
pydantic-settings = "^2.2.1"
psycopg = "^3.1.18"
jinja2 = "^3.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
